[gd_scene load_steps=10 format=3 uid="uid://dg1lofcdwnabp"]

[ext_resource type="Script" uid="uid://dtxwb0xf37mv" path="res://ui/menu.gd" id="1_udkah"]
[ext_resource type="Texture2D" uid="uid://b8x3tm5c0f67b" path="res://assets/collector def.svg" id="2_4c782"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_afec1"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.7019608)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_31qfy"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.1, 0.1, 0.1, 0.83137256)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
corner_detail = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udkah"]
bg_color = Color(0, 0.56078434, 0.47843137, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u7cqb"]
bg_color = Color(0.30588236, 0.5137255, 0.5921569, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c782"]
bg_color = Color(1, 0.5019608, 0.4, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e2xy7"]
bg_color = Color(1, 0.5882353, 0.44313726, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fimr5"]
bg_color = Color(1, 0.43529412, 0.5686275, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_udkah")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 468.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_afec1")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Panel" type="Panel" parent="MarginContainer/Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_31qfy")

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/Panel/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/default_color = Color(0.6901961, 0.65882355, 0.7254902, 1)
theme_override_font_sizes/normal_font_size = 85
theme_override_font_sizes/bold_font_size = 85
theme_override_font_sizes/bold_italics_font_size = 85
theme_override_font_sizes/italics_font_size = 85
theme_override_font_sizes/mono_font_size = 85
bbcode_enabled = true
text = "[i]REAP WHAT
YOU ROAD"
fit_content = true
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 200

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
texture = ExtResource("2_4c782")
expand_mode = 3
stretch_mode = 4

[node name="ResumeButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_udkah")
text = "Resume"

[node name="TutorialButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_u7cqb")
text = "Tutorial"

[node name="MainMenuButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_4c782")
text = "Main Menu"

[node name="StartButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_e2xy7")
text = "Start Game"

[node name="EndlessButton" type="Button" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fimr5")
text = "Endless Challenge"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Music:"

[node name="MusicSlider" type="HSlider" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "SFX"

[node name="SfxSlider" type="HSlider" parent="MarginContainer/Panel/VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
